--- a/src/components/HostsGame.module.css
+++ b/src/components/HostsGame.module.css
@@ -72,3 +72,25 @@
 .Timer span {
   font-size: 15vw;
 }
+
+.NameList {
+  display: inline-block;
+}
+
+.GoodJob {
+  position: fixed;
+  top: 0;
+  left: 0;
+  display: flex;
+  width: 100vw;
+  height: 100vh;
+  justify-content: center;
+  align-items: center;
+}
+
+.LeaderBoard {
+  user-select: none;
+}
+.LeaderBoard li {
+  list-style: none;
+}
