--- a/src/components/HostNav.module.css
+++ b/src/components/HostNav.module.css
@@ -1,10 +1,35 @@
-.HostNav {
-  width: 100vw;
-  background-color: var(--my-red);
+.HostNav[out='0'] {
+  position: fixed;
+  top: 50px;
+  left: 100vw;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  background-color: var(--my-black);
+  width: 250px;
+  border-top-left-radius: 10px;
+  border-bottom-left-radius: 10px;
+  transition: left 1s;
+}
+
+.HostNav[out='1'] {
+  position: fixed;
+  top: 50px;
+  left: calc(100vw - 250px);
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  background-color: var(--my-black);
+  width: 250px;
+  border-top-left-radius: 10px;
+  border-bottom-left-radius: 10px;
+  transition: left 1s;
 }
 
 .EndButton {
   background-color: transparent;
   border-style: none;
   font-size: larger;
+  color: var(--my-white);
+  margin: 10px;
 }
